--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
-node_modules
-npm-debug.log
-.DS_Store
+_site
+.sass-cache
+.jekyll-metadata
+node_modules/
+*npm-debug.log
+*.DS_Store
+public/bundle.js
+package-lock.json
+*hot-update.js
+*hot-update.json
